// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MealCard should render correctly when type is caterer 1`] = `
<div
  className="meal-card"
  id="81211c24-51c0-46ec-b1e0-18db55880958"
>
  <div
    className="meal-card-header"
  >
    <img
      alt="meal"
      src="http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg"
    />
    <Dropdown
      content={
        <React.Fragment>
          <Link
            className={null}
            clickHandler={[Function]}
            data-tooltip-content={null}
            data-tooltip-id={null}
            id="edit-meal"
          >
            Edit
          </Link>
          <Link
            className={null}
            clickHandler={[Function]}
            data-tooltip-content={null}
            data-tooltip-id={null}
            id="delete-meal"
          >
            Delete
          </Link>
        </React.Fragment>
      }
      toggler={
        <React.Fragment>
          …
        </React.Fragment>
      }
      type="card"
    />
    <div
      className="menu-card-title"
    >
      <p>
        Jollof Rice, Beef and Plantain
      </p>
    </div>
  </div>
  <div
    className="meal-card-body"
  >
    <div>
      <h3>
        ₦
        1500.00
      </h3>
      <p
        className="meal-description"
        data-tooltip-content="Jollof Rice, Beef and Plantain. 2 pieces of beef per plate"
        data-tooltip-id="meal-card-tooltip"
      >
        Jollof Rice, Beef and Plantain. 2 pieces of beef per plate
      </p>
    </div>
  </div>
  <ForwardRef
    className="tooltip"
    effect="solid"
    id="meal-card-tooltip"
    place="top"
    type="dark"
  />
</div>
`;

exports[`MealCard should render correctly when type is customer 1`] = `
<div
  className="meal-card customer-meal-card"
  id="81211c24-51c0-46ec-b1e0-18db55880958"
>
  <div
    className="meal-card-header"
  >
    <img
      alt="meal"
      src="http://www.preciouscore.com/wp-content/uploads/2017/11/How-to-cook-jollof-rice-in-the-oven-750x500.jpg"
    />
    <div
      className="menu-card-title"
    >
      <p>
        Jollof Rice, Beef and Plantain
      </p>
    </div>
  </div>
  <div
    className="meal-card-body"
  >
    <div>
      <h3>
        ₦
        1500.00
      </h3>
      <p
        className="meal-description"
        data-tooltip-content="Jollof Rice, Beef and Plantain. 2 pieces of beef per plate"
        data-tooltip-id="meal-card-tooltip"
      >
        Jollof Rice, Beef and Plantain. 2 pieces of beef per plate
      </p>
    </div>
    <div
      className="meal-card-action"
    >
      <button
        className="btn btn-sec meal-card-btn"
        disabled={null}
        onClick={null}
        type="button"
      >
        Add To Basket
      </button>
    </div>
  </div>
  <ForwardRef
    className="tooltip"
    effect="solid"
    id="meal-card-tooltip"
    place="top"
    type="dark"
  />
</div>
`;
